[metadata]
license_file = LICENSE.md

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings
python_paths = tests

[isort]
line_length = 88
use_parentheses = True
include_trailing_comma = True
multi_line_output = 3
known_first_party = drf_recaptcha
known_third_party = ipware,rest_framework
known_django = django

[aliases]
test = pytest
