[metadata]
license_file = LICENSE.md

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings
addopts = -ra --cache-clear --no-cov-on-fail --cov-report=term --cov-report xml:coverage.xml --cov=drf_recaptcha
console_output_style = count

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

[isort]
line_length = 88
use_parentheses = True
include_trailing_comma = True
multi_line_output = 3
known_first_party = drf_recaptcha
known_third_party = ipware,rest_framework
known_django = django

[aliases]
test = pytest
